# AutopsySpeechToText

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
autopsy_modules/speech_modules/: ast_report.py  process_inaSpeechSegmenter.py  speech_modules_utils.py  speech_modules_utils_autopsy.py  vad_check_ingest.py  wave.py
bash/: deepspeech_iss.sh
python/: deepspeech_iss.py  ina_speech_segmenter.spec
src/deepspeech_csv/: args.h  main.cc
src/vad_transcriber/: args.h  main.cc  vad_transcriber_args.h
